src/global/styles/global.css
@layer reset, root, global, grid;

@layer root {
  :root {
    color-scheme: light dark;
    --color-main: #62748e;
    --color-dark: hsl(from var(--color-main) h s calc(l / 1.1));
    --color-light: hsl(from var(--color-main) h s calc(l * 1.8));
    --bg-dark: linear-gradient(160deg, #060d1f 0%, #0d2550 40%, #1a3a6e 70%, #0a1a35 100%);
    --spacing: 0.25rem;
    --breakpoint-lg: 48rem;
    --default-font-family: "Poppins", "Poppins Fallback";
  }

  html {
    scroll-behavior: smooth;
  }

  body {
    font-family: var(--default-font-family,
        ui-sans-serif,
        system-ui,
        sans-serif,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol",
        "Noto Color Emoji"
      );
    background: white;
    background-attachment: fixed;

    @media (prefers-color-scheme: dark) {
      background: var(--bg-dark);
    }
  }

  @media (width < 48rem) {
    body {
      padding-bottom: 4.5rem;
    }
  }

  @view-transition {
    /* biome-ignore lint/correctness/noUnknownProperty: This is a standard-track CSS View Transition property. */
    navigation: auto;
  }
}

@layer global {
  .astro-code {
    padding: 1rem;
    margin-block: 1lh;
  }

  h1,
  h2 {
    color: light-dark(var(--color-dark), white);
    font-weight: 700;
  }

  h3,
  h4,
  h5,
  h6 {
    color: light-dark(var(--color-dark), white);
    font-weight: 600;
  }

  h1 {
    font-size: clamp(2.5rem, 6vw, 4rem);
  }

  h2 {
    font-size: clamp(2rem, 4vw, 3rem);
  }

  h3 {
    font-size: clamp(1.5rem, 3vw, 2.25rem);
  }

  h4 {
    font-size: clamp(1.25rem, 2vw, 1.75rem);
  }

  h5 {
    font-size: clamp(1.1rem, 1.5vw, 1.3rem);
  }

  h6 {
    font-size: clamp(1rem, 1vw, 1.1rem);
  }

  body,
  p,
  a,
  li,
  dl,
  dt,
  dd {
    font-size: clamp(1rem, 1.2vw, 1.125rem);
  }

  a {
    color: inherit;
    font-weight: normal;
    text-decoration: none;
  }

  a,
  p,
  dl {
    --_color: inherit;
    font-size: clamp(1rem, 1.2vw, 1.125rem);
    color: var(--color, var(--_color));
  }

  dl {
    dt {
      font-weight: 600;
    }

    dd {
      margin-left: calc(var(--spacing) * 4);
    }
  }

  .sr-only {
    display: none;
  }

  svg,
  svg * {
    color: inherit;
  }

  main section.scrolll-animated {
    animation: fade-in 1s ease-in-out;
    animation-fill-mode: forwards;
    animation-timeline: view();
    animation-range: entry 10% cover 40%;
  }

  @keyframes fade-in {
    from {
      opacity: 0;
      transform: translateX(10px), scale(0.3);
    }

    to {
      opacity: 1;
      transform: translateX(0), scale(1);
    }
  }

  .button {
    cursor: pointer;
    line-height: 1.3;
    text-decoration: none;
    padding: 0.75rem;
    border: 0;
    border-radius: 0.5rem;

    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 0.25rem;
  }

  .button>svg {
    width: 1.75rem;
    margin: 0 0.5rem;
    aspect-ratio: 1;
  }

  .button-block {
    width: 100%;
  }

  .button-primary {
    --_color: light-dark(var(--color-light), white);
    --_background-color: var(--background-color,
        light-dark(var(--color-dark), #2563eb));
    color: var(--color, var(--_color));
    background-color: var(--background-color, var(--_background-color));

    transition: opacity 200ms;
  }

  .button-primary:is(:hover, :focus-visible) {
    outline-color: var(--color-main);
    opacity: 0.8;
  }

  .button-outline {
    background: transparent;
    border: 2px solid light-dark(var(--color-dark), white);
    color: light-dark(var(--color-dark), white);
  }

  .button-outline:is(:hover, :focus-visible) {
    border-color: light-dark(var(--color-dark), var(--color-light));
    background-color: light-dark(var(--color-light), var(--color-dark));
    outline-color: var(--color-main);
  }
}

